feat: add party member markers and enhance party UI interactions